--- a/style.css
+++ b/style.css
@@ -1,161 +1,224 @@
 * {
-    padding: 0px;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    /* Свойства для сброса начальных стилей элементов */
+}
+
+.container {
+    outline: 1px solid red;
+    /* чтобы контейнер был виден, в конце можно будет удалить это св-во */
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1140px;
+    /* 📍 Максимальная ширина для контейнера */
 }
 
 body {
+    font-family: "Inter", sans-serif;
     color: #303030;
 }
 
 header {
-    height: 70px;
     background-color: #2965F1;
-    padding: 23px;
-    /* Стили для хедера */
+    padding: 23px 0;
 }
 
 header span {
-    font-weight: 700px;
-    font-size: 23px;
-    color: #FFFFFF;
-    /* Стили для текста в хедере IT-INCUBATOR */
+    font-weight: 700;
+    font-size: 20px;
+    color: #fff;
 }
 
 .main-section {
-    background-color: #FAFAFF;
+    background-color: #fafaff;
     padding: 60px 0;
-    min-width: 100vh;
-    /* Стили для первой секции */
+    min-height: 100vh;
+    display: flex;
+    /* Центрирует по горизонтали */
+    align-items: center;
+    /* Центрирует по вертикали */
+    /* 📍 Свойства flexbox для размещения container-a вертикально по центру */
+}
+
+.main-section .wrapper {
+    display: flex;
+    /* Включаем Flexbox */
+    /* Центрируем элементы по горизонтали */
+    align-items: center;
+    /* 📍 Свойствa flexbox для размещения блока с текстом и изображения в ряд, и центрирования их по вертикали */
+}
+
+.text-wrapper {
+    max-width: 425px;
+    /* 📍 Cвойство для ограничения ширины блока с текстом в первой секции */
 }
 
 .main-title {
+    font-weight: 700;
     font-size: 48px;
-    font-weight: 700px;
     margin-bottom: 20px;
-    /* Стили для заголовка в первой секции */
 }
 
 .main-text {
     font-weight: 400;
     font-size: 18px;
-    /* Стили для текста в первой секции */
 }
 
 .main-image {
     max-width: 715px;
-    /* Стили для изображения в первой секции */
 }
 
 .about-section {
-    background-color: #FFFFFF;
+    background-color: #fff;
     padding: 100px 0;
-    /* Стили для второй секции */
+}
+
+.about-section .wrapper {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
 }
 
 select {
-    border: 1px solid #3030304D;
+    border: 1px solid rgba(48, 48, 48, 0.3);
     border-radius: 5px;
+    width: 150px;
     padding: 8px 12px;
     font-weight: 400;
     font-size: 16px;
     appearance: none;
-    background-image: url(./assests/images/ep_arrow-down.svg);
+    background-image: url("./ep_arrow-down.svg");
     background-repeat: no-repeat;
     background-position: right 12px top 50%;
-    /* Стили для выпадающего списка */
+}
+
+select:hover,
+.text-field:hover {
+    border-color: #688de3;
+    /* 📍 Стили для выпадающего списка и текстового поля при наведении курсора */
+}
+
+.info-wrapper {
+    display: flex;
+    * 📍 Свойство flexbox для расположения 2-х списков в ряд */
 }
 
 .section-title {
     font-weight: 700;
     font-size: 24px;
-    text-align: left;
     margin-bottom: 25px;
-    /* Стили для заголовков во второй секции */
+}
+
+.frameworks,
+.books {
+    min-width: 50%;
+}
+
+.frameworks-list,
+.books-list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    /* 📍 Свойства flexbox для отступов между элементами в списках */
 }
 
 .frameworks-list {
-    width: 80px;
-    height: 57px;
     font-weight: 400;
     font-size: 16px;
-    list-style-image: url(./assests/images/solar_map-arrow-up-bold.png);
-    padding: 0 20px;
-    /* Стили для маркированного списка во второй секции */
+    list-style-image: url(./solar_map-arrow-up-bold.svg);
+    padding-left: 20px;
+}
+
+.skills-block {
+    display: flex;
+    flex-direction: column-reverse;
+    /* 📍 Свойства flexbox для расположения формы над элементами с классом .label */
+}
+
+.skills {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    /* 📍 Свойства flexbox для расположения элементов с классом .label */
 }
 
 .books-list {
-    width: 670px;
-    height: 57px;
     font-weight: 400;
     font-size: 16px;
-    padding: 0 20px;
-    /* Стили для нумерованного списка во второй секции */
+    padding-left: 20px;
 }
 
 .label {
     font-weight: 400;
     font-size: 16px;
-    /* Стили для подписей чекбоксов */
+}
+
+form {
+    margin-bottom: 40px;
 }
 
 .text-field {
-    font-weight: 400;
-    font-size: 16px;
-    height: 36px;
-    width: 330px;
-    text-align: left;
     border: 1px solid rgba(48, 48, 48, 0.3);
     border-radius: 5px;
+    max-width: 330px;
+    width: 100%;
+    height: 36px;
     background-color: rgba(255, 255, 255, 0);
     padding: 8px 12px;
-    /* Стили для односточного поля ввода текста */
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .btn {
-    border-radius: 5px;
     border: none;
+    border-radius: 5px;
     width: 125px;
     height: 36px;
     background-color: #2965f1;
     font-weight: 700;
     font-size: 14px;
     color: #fff;
-    /* Стили для кнопки */
+}
+
+.btn:hover {
+    background-color: rgba(41, 101, 241, 0.9);
+    cursor: pointer;
+    /* 📍 Стили для кнопки при наведении курсора */
 }
 
 .line {
     margin: 60px 0;
-    /* Стили для линии */
 }
 
 table {
-    table-layout: fixed;
+    border: 1px solid #95a1bb;
     border-collapse: collapse;
     font-weight: 400;
     font-size: 14px;
-    /* Стили для таблицы */
+    margin: 0 auto;
 }
 
 th,
 td {
-    height: 40px;
-    padding: 12px 15px
-    /* Стили для ячеек таблицы */
+    padding: 12px 15px;
 }
 
 footer {
-    height: 70px;
     background-color: rgba(163, 167, 255, 0.3);
     padding: 26px 0;
-    /* Стили для футера */
+    text-align: center;
+    /* 📍 Свойство для расположения ссылки горизонтально по центру */
 }
 
 .footer-link {
-    text-decoration: none;
     font-weight: 400;
     font-size: 14px;
     color: #2965f1;
-    /* Стили для футера */
+    text-decoration: none;
+}
+
+.footer-link:hover {
+    text-decoration: underline;
+    /* 📍 Стили для ссылки при наведении курсора */
 }
